[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'o2g'
author = 'Mehdi Sadeghi'
author-email = 'mehdi@mehdix.org'
home-page = 'https://github.com/hiposfer/o2g'
requires-python = '>=3.5'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
description-file = 'README.md'
keywords = 'osm gtfs'
requires = ['osmium']

[tool.flit.metadata.requires-extra]
test = ['pytest']
web = ['bottle']

[tool.flit.scripts]
o2g = 'o2g.cli:cli'
